# Digital_services_management

./: .gitignore  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  seed_data.py
.github/workflows/: deploy.yml
accounts/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
digital_service_provider_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
reports/: admin.py  urls.py  views.py
services/: admin.py  forms.py  models.py  urls.py  views.py
services/migrations/: 0001_initial.py
subscriptions/: admin.py  apps.py  models.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: admin_dashboard.html  admin_user_confirm_delete.html  admin_user_form.html  admin_user_list.html  login.html  password_reset_request.html  register.html  set_new_password.html  user_dashboard.html  user_profile.html
templates/reports/: sales_report.html
templates/services/: admin_plan_confirm_delete.html  admin_plan_form.html  admin_plan_list.html  plan_detail.html  plan_list.html
templates/subscriptions/: admin_subscription_list.html  confirm_deactivate.html  confirm_reactivate.html  confirm_subscribe.html  my_subscriptions.html  upgrade_downgrade.html
