[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-service-provider-lib"
version = "0.1.0"
description = "A library for digital service providers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=4.0",
]

[tool.setuptools.packages.find]
include = ["services*", "accounts*"]  # Mention the folders you want to publish
